# opensearch-agent-skills

./: DEVELOPER_GUIDE.md  MAINTAINERS.md  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: hackathon_submission.yaml
.github/workflows/: backport.yml  check-maintainer.yml  check-reviewer.yml  ci.yml  delete_backport_branch.yml  evals.yml  links-checker.yml  pr_review.yml  solr-opensearch-migration-advisor-ci.yml  sync-bot-ci.yml  sync-skills.yml  validate-skills.yml
scripts/: compare_baseline.py  run_benchmark.py  update_baseline.py
skills/opensearch-skills/: SKILL.md  cli-reference.md
skills/opensearch-skills/cloud/: SKILL.md
skills/opensearch-skills/ingest/: SKILL.md
skills/opensearch-skills/observability/: ppl-reference.md
skills/opensearch-skills/scripts/: eval_documents.py  opensearch_ops.py
sync/: state.json
tests/: test_agent_skills_eval_document_processing.py  test_agent_skills_feedback.py  test_agent_skills_ingest.py  test_agent_skills_opensearch_ops.py  test_agent_skills_operations.py  test_agent_skills_quality.py  test_agent_skills_samples.py  test_agent_skills_search.py  test_agent_skills_sparse_agentic.py  test_agent_skills_spec_compliance.py  test_agent_skills_standalone_assets.py  test_agent_skills_ua_attribution.py  test_agent_skills_ui.py  test_evals_workflow_trust_logic.py
tests/evals/: conftest.py  test_skill_routing.py  test_skill_rules.py  test_skill_workflows.py
tests/evals/fixtures/: routing.json  skill_rules.json  (+1 more)
(+36 files in other folders)
