[project]
name = "opensearch-agent-skills"
version = "0.1.0"
description = "OpenSearch Agent Skills"
requires-python = ">=3.11"
dependencies = [
    "opensearch-py",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pyyaml>=6.0"]
evals = ["pytest>=9.0.3", "pytest-evals>=0.3", "boto3>=1.28", "deepeval>=2.0", "aiobotocore>=2.13"]
